<resources>
    <string name="app_name">ABNDP4byNoorAlMashhadani</string>
    <string name="song_album_image">Song Album Image</string>
    <string name="play_button_image">Play Button Image</string>
    <string name="pause_button_image">Pause Button Image</string>
    <string name="song">Song:</string>
    <string name="album">Album:</string>
    <string name="artist_s">Artist(s):</string>
    <string name="release">Release:</string>
    <string name="be_album_cover_image">BE Album Cover Image</string>
    <string name="be">BE</string>
    <string name="bts">BTS</string>
    <string name="seven_the_journey_album_cover_image">Seven The Journey Album Cover Image</string>
    <string name="map_of_the_soul_7_the_journey">MAP OF THE SOUL:7~THE JOURNEY~</string>
    <string name="map_of_the_soul_7">MAP OF THE SOUL:7</string>
    <string name="d_2">D-2</string>
    <string name="agust_d">Agust D</string>
    <string name="seven_album_cover_image">Seven Album Cover Image</string>
    <string name="d_2_album_cover_image">D-2 Album Cover Image</string>
</resources>