<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/be_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/be_album_cover_image"
            android:src="@drawable/be_album_cover" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/be"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bts"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seven_the_journey_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/seven_the_journey_album_cover_image"
            android:src="@drawable/seven_the_journey_album_cover" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_of_the_soul_7_the_journey"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bts"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seven_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/seven_album_cover_image"
            android:src="@drawable/seven_album_cover" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_of_the_soul_7"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bts"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/d2_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/d_2_album_cover_image"
            android:src="@drawable/d2_album_cover" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_2"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agust_d"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>